--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
      <p> We have officially gone to war with Timland. Serving in the army is optional.</p>
    </div>
   <br><br><br><br><br><br>
+  <h1>Lemon Cult</h1>
+  <h2>Tinland affiliate</h2>
+  <div class="beliefs-container">
+  <a href="lemoncult.html" class="button" target="_blank"> Lemon Cult</a>
+  </div>
   <div class="beliefs-container">
     <h1 id="welcome-message">Welcome to Tinland</h1>
 
