--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   }
 
   .beliefs-container a.button:hover {
-    background-color: #3700b3; /* Darker purple on hover */
+    background-color: #3700b3; border-radius: 20px; /* Darker purple on hover */
   }
 
   /* News Section */
