--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   }
 
   .beliefs-container a.button:hover {
-    background-color: #3700b3; border-radius: 20px; transition-duration: 2s;
+    background-color: #3700b3; border-radius: 20px; transition-duration: .7s;
   transition-timing-function: ease-in-out; /* Darker purple on hover */
   }
 
