--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Welcome to Tinland!</h1>
    <a href="tinapedia.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> Tinapedia</a>
    <a href="user-info.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> your page</a>
+   <a href="funds.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> Funds</a>
   <h2>Our Beliefs:</h2>
   <div class="beliefs-container">
     <ul>
