--- a/donate.html
+++ b/donate.html
@@ -1,4 +1,15 @@
-<!DOCTYPE html>
+<h1>Under Maintnence for bugs</h1>
+<style>
+ 
+        h1 {
+            text-align: center;
+            padding-top: 40px;
+            font-size: 2.5em;
+            color: #0099ff;
+            margin-bottom: 0;
+        }
+</style>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -81,4 +92,4 @@
     <a href="https://www.amazon.com" class="donate-button" target="_blank">Donate Now</a>
   </div>
 </body>
-</html>
+</html> -->
