--- a/shop.html
+++ b/shop.html
@@ -1,4 +1,14 @@
-<!DOCTYPE html>
+<h1>Under Maintnence for bugs</h1>
+<style>
+ 
+        h1 {
+            text-align: center;
+            padding-top: 40px;
+            font-size: 2.5em;
+            color: #0099ff;
+            margin-bottom: 0;
+        }
+</style><!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -271,3 +281,4 @@ if (window.location.pathname.includes('user-info.html')) {
   });
 }
 </script>
+ -->
