--- a/tinapedia.html
+++ b/tinapedia.html
@@ -1,4 +1,14 @@
-<!DOCTYPE html>
+<h1>Under Maintnence for bugs</h1>
+<style>
+ 
+        h1 {
+            text-align: center;
+            padding-top: 40px;
+            font-size: 2.5em;
+            color: #0099ff;
+            margin-bottom: 0;
+        }
+</style><!-- <!DOCTYPE html>
 <html>
 <head>
   <title>TinaPedia</title>
@@ -149,3 +159,4 @@
   </footer>
 </body>
 </html>
+ -->
