--- a/funds.html
+++ b/funds.html
@@ -171,23 +171,23 @@
             <div class="progress-bar-container">
                 <div class="progress-bar funds" style="width: 100%;">100%</div>
             </div>
-            <div class="balance">$27</div>
+            <div class="balance">$32</div>
         </div>
 
         <div class="section">
             <h2>Funds Goal</h2>
             <div class="progress-bar-container">
-                <div class="progress-bar savings" style="width: 47%;">47%</div>
+                <div class="progress-bar savings" style="width: 100%;">109%</div>
             </div>
-            <div class="balance">$12 of $30</div>
+            <div class="balance">$32 of $30</div>
         </div>
 
         <div class="section">
             <h2>Candy Bag Cart Cost</h2>
             <div class="progress-bar-container">
-                <div class="progress-bar investments" style="width: 100%;">147%</div>
+                <div class="progress-bar investments" style="width: 100%;">100%</div>
             </div>
-            <div class="balance">$30</div>
+            <div class="balance">$30-$40</div>
         </div>
 
         <div class="section purchases">
@@ -200,10 +200,5 @@
         </div>
 
     </div>
-
-    <div class="footer">
-        <p>&copy; Tinland</p>
-    </div>
-
 </body>
 </html>
