--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <h1>Lemon Cult</h1>
   <h2>Tinland affiliate</h2>
   <div class="beliefs-container">
+<h3>Lemon Cult is a Tinland afilliate focused on lemons. Visit the site to learn more</h3>
   <a href="lemoncult.html" class="button" target="_blank"> Lemon Cult</a>
   </div>
   <div class="beliefs-container">
