--- a/donate.html
+++ b/donate.html
@@ -83,13 +83,14 @@
 <body>
   <div class="container">
     <h1>Support Our Candy Bag!</h1>
-    <h2>Buy candy to share with us!</h2>
+    <h2Donate!</h2>
     <ul>
       <li>You can buy candy in bulk on amazon and bring it to help us out.</li>
+ <li>You can donate cash to help us fund our next communal purchase</li>
       <li>Any Tinizen can take their equal share of candy any day</li>
-      <li>Candy buying is optional!</li>
     </ul>
-    <a href="https://www.amazon.com" class="donate-button" target="_blank">Donate Now</a>
+<h3> If you can please consider donating cash or candy. Click the button to do so<h3>
+    <a href="donatenow.html" class="donate-button" target="_blank">Donate Now</a>
   </div>
 </body>
 </html> -->
