Update and rename login to login.html

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
             color: #0099ff;
             margin-bottom: 0;
         }
-</style><!-- <!DOCTYPE html>
+</style> <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
