--- a/login.html
+++ b/login.html
@@ -1,14 +1,4 @@
-<h1>Under Maintnence for bugs</h1>
-<style>
- 
-        h1 {
-            text-align: center;
-            padding-top: 40px;
-            font-size: 2.5em;
-            color: #0099ff;
-            margin-bottom: 0;
-        }
-</style> <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
