--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
    <div class="beliefs-container">
      <h3>War with Timland!</h3>
      <p> We have officially gone to war with Timland. Serving in the army is optional.</p>
+     <a href="military.html" class="button" target="_blank"> Learn More</a>
    </div>
   <h1>Lemon Cult</h1>
   <h2>Tinland affiliate</h2>
   <div class="beliefs-container">
-<h3>Lemon Cult is a Tinland afilliate focused on lemons. Visit the site to learn more</h3>
+<h2>Lemon Cult is a Tinland afilliate focused on lemons. Visit the site to learn more!</h2>
   <a href="lemoncult.html" class="button" target="_blank"> Lemon Cult</a>
   </div>
   <div class="beliefs-container">
