--- a/military.html
+++ b/military.html
@@ -1,1 +1,170 @@
-<h2>In progress! <br> Coming Soon!</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tinland</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <h1> The Tim Military</h1>
+    <h1>Welcome to Tinland!</h1>
+   <a href="index.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> Home</a>
+  <h2>Overview:</h2>
+  <div class="beliefs-container">
+<p> The Tim Military is a group of willing Tinizens who fight in the war against Timland. Tin Military personell recive exclusive benifits and treatment for their work</p>
+  </div>
+  <h2> Apply: </h2>
+  <br>
+ <div class="beliefs-container">
+   <h3>Join The Military!</h3>
+   <p> Join the military to protect Tinland!</p>
+   <a href="military-test.html" class="button" target="_blank"> Apply</a>
+ </div>
+<h1>JOIN THE MILITARY!</h1>
+</body>
+</html>
+<style>
+  /* General Reset */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+  }
+
+  /* Body and Background */
+  body {
+    background-color: #121212; /* Dark background */
+    color: #e0e0e0; /* Light text color */
+    line-height: 1.6;
+  }
+
+  /* Header */
+
+  /* Beliefs Container */
+  .beliefs-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px; /* Add margin for spacing */
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 30px;
+    background-color: #1c1c1c; /* Darker background for the content area */
+    width: 80%; /* Set a relative width for better responsiveness */
+    max-width: 700px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Light shadow for depth */
+  }
+
+  .beliefs-container ul {
+    font-size: 18px; /* Adjust font size for readability */
+    list-style: none;
+  }
+
+  .beliefs-container p {
+    color: #b0b0b0; /* Light gray text for paragraphs */
+    text-align: center;
+    margin: 10px 20px;
+  }
+
+  .beliefs-container h1, .beliefs-container h2, .beliefs-container h3 {
+    margin-bottom: 15px;
+  }
+
+  .beliefs-container a.button {
+    background-color: #6200ea; /* Purple button */
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+
+  .beliefs-container a.button:hover {
+    background-color: #3700b3; border-radius: 20px; transition-duration: .7s;
+  transition-timing-function: ease-in-out; /* Darker purple on hover */
+  }
+
+  /* News Section */
+  .beliefs-container h3 {
+    color: #ff79c6; /* Lighter color for news titles */
+  }
+
+  /* Footer or Additional Sections (if any) */
+  footer {
+    background-color: #1f1f1f;
+    color: #b0b0b0;
+    text-align: center;
+    padding: 15px 0;
+  }
+
+  footer p {
+    font-size: 14px;
+  }
+
+  /* Forms and Buttons */
+  input, textarea {
+    background-color: #333;
+    color: #e0e0e0;
+    border: 1px solid #444;
+    padding: 10px;
+    border-radius: 5px;
+    width: 100%;
+    max-width: 500px;
+    margin-top: 10px;
+  }
+
+  input:focus, textarea:focus {
+    border-color: #bb86fc; /* Purple border on focus */
+    outline: none;
+  }
+
+  button {
+    background-color: #6200ea;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  button:hover {
+    background-color: #3700b3;
+  }
+
+  /* Error message styling */
+  .error-message {
+    color: #ff4d4d;
+    font-size: 14px;
+    text-align: center;
+  }
+
+  /* Scrollbar */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #bb86fc;
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #1f1f1f;
+  }
+  \header {
+    padding-top: 40px; /* Adds 40px padding to the top of the header */
+  }
+
+  h1 {
+    margin-top: 0; /* Optional, just to ensure no additional margin is added */
+  }
+
+
+</style>
