--- a/military-test.html
+++ b/military-test.html
@@ -1,1 +1,94 @@
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Citizenship Test</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="citizenship-test-container">
+    <h2>Citizenship Test</h2>
+    <form id="citizenship-test-form">
+      <div class="question">
+        <label for="question1">Why Are you joining?</label>
+        <select id="question1" name="question1">
+          <option value="idk">idk</option>
+          <option value="fun">fun</option>
+          <option value="hate timland">hate timland</option>
+          <option value="cuz tin">cuz tin</option>
+        </select>
+      </div>
+      <div class="question">
+        <label for="question2">Will You actually fight?</label>
+        <select id="question2" name="question2">
+          <option value="yes">yes</option>
+          <option value="no">no</option>
+        </select>
+      </div>
+    </form>
+  </div>
 
+</body>
+</html>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #222;
+      color: #fff;
+    }
+
+    .citizenship-test-container {
+      width: 80%;
+      margin: 50px auto;
+      background-color: #333;
+      padding: 30px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 30px;
+      color: #eee;
+    }
+
+    .question {
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+      color: #eee;
+    }
+
+    select {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #666;
+      border-radius: 3px;
+      font-size: 16px;
+      background-color: #444;
+      color: #eee;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 3px;
+      cursor: pointer;
+      font-size: 16px;
+      display: block;
+      margin: 20px auto;
+    }
+
+    button:hover {
+      background-color: #0069d9;
+    }
+  </style>
