--- a/military-test.html
+++ b/military-test.html
@@ -28,7 +28,7 @@
       </div>
     </form>
   </div>
-
+ <a href="index.html" class="button" target="_blank" style="font-size: 1.2em; color: white;">Submit</a>
 </body>
 </html>
   <style>
