--- a/military-test.html
+++ b/military-test.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Citizenship Test</title>
+  <title>Military Test</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="citizenship-test-container">
-    <h2>Citizenship Test</h2>
+    <h2>Military Test</h2>
     <form id="citizenship-test-form">
       <div class="question">
         <label for="question1">Why Are you joining?</label>
@@ -26,9 +26,10 @@
           <option value="no">no</option>
         </select>
       </div>
+      <a href="index.html" class="button" target="_blank" style="font-size: 1.2em; color: white;">Submit</a>
     </form>
   </div>
- <a href="index.html" class="button" target="_blank" style="font-size: 1.2em; color: white;">Submit</a>
+
 </body>
 </html>
   <style>
