--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <a href="tinapedia.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> Tinapedia</a>
    <a href="user-info.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> your page</a>
    <a href="funds.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> Funds</a>
+   <a href="gov.html" class="button" target="_blank" style="font-size: 1.2em; color: white;"> Government Page</a>
   <h2>Our Beliefs:</h2>
   <div class="beliefs-container">
     <ul>
