--- a/login.html
+++ b/login.html
@@ -37,6 +37,13 @@ const users = {
     role: 'You have 3 tin credits',
     bio: 'More features coming soon',
   },
+  Noah: {
+    username: 'Noah',
+    password: 'noahchoi123',
+    email: 'Noah!',
+    role: 'You have 12 tin credits',
+    bio: 'More features coming soon',
+  },
   Johnny: {
     username: 'Johnsidus the Third',
     password: 'password2',
