--- a/index.html
+++ b/index.html
@@ -220,6 +220,13 @@ const users = {
     role: 'You have 3 tin credits',
     bio: 'More features coming soon',
   },
+    Noah: {
+    username: 'Noah',
+    password: 'noahchoi123',
+    email: 'Noah!',
+    role: 'You have 12 tin credits',
+    bio: 'More features coming soon',
+  },
   Kevin: {
     username: 'Kevin',
     password: 'password3',
