--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 </style>
 <script>
   // Sample accounts for demo purposes
+// Sample accounts for demo purposes
 const users = {
   Liam: {
     username: 'Liam',
