--- a/user-info.html
+++ b/user-info.html
@@ -50,6 +50,7 @@
   </style>
 <script>
   // Sample accounts for demo purposes
+// Sample accounts for demo purposes
 const users = {
   Liam: {
     username: 'Liam',
