--- a/shop.html
+++ b/shop.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<h2>Disabled due to Bugs</h2>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,18 +11,18 @@
 
   <button class="buy-button" onclick="window.location.href='index.html'">Home</button>
   <!-- Shop Page Content -->
-  <div class="shop-container">
+<!--   <div class="shop-container">
     <h1>Welcome to the Tinland Shop</h1>
     <p>DM maks to confirm your order!</p>
 
     <!-- Display User Currency -->
-    <div id="user-credits">
+<!--     <div id="user-credits">
       <p id="user-credits-display"></p>
     </div>
 
     <div class="product-container">
       <!-- Product 1 -->
-      <div class="product-card">
+<!--       <div class="product-card">
         <h2>Basic Card</h2>
         <p>Small Flex</p>
         <p class="price">5 tin credits</p>
@@ -29,7 +30,7 @@
       </div>
 
       <!-- Product 2 -->
-      <div class="product-card">
+<!--       <div class="product-card">
         <h2>Gold Card</h2>
         <p>Big flex</p>
         <p class="price">12 tin credits</p>
@@ -37,25 +38,25 @@
       </div>
 
       <!-- Product 3 -->
-      <div class="product-card">
+<!--       <div class="product-card">
         <h2>Sigma Card</h2>
         <p>Huge flex!</p>
         <p class="price">30 tin credits</p>
-        <button class="buy-button" onclick="buyProduct(30)">Buy Now</button>
+        <button class="buy-button" onclick="buyProduct(30)">Buy Now</button> -->
       </div>
-
-      <div class="product-card">
+ -->
+<!--       <div class="product-card">
         <h2>Sigma gigachad rizz Card</h2>
         <p>Huge sigma giga flex!</p>
         <p class="price">100 tin credits</p>
-        <button class="buy-button" onclick="buyProduct(100)">Buy Now</button>
+        <button class="buy-button" onclick="buyProduct(100)">Buy Now</button> -->
       </div>
     </div>
-  </div>
-
+  </div> -->
+ -->
   <script src="app.js"></script>
 </body>
-</html>
+</html> -->
 
 <style>
   body {
@@ -148,78 +149,137 @@
 <script>
   // Sample accounts for demo purposes
 // Sample accounts for demo purposes
+// Sample accounts for demo purposes
 const users = {
   Liam: {
     username: 'Liam',
     password: 'password1',
     email: 'Liam!',
-    role: 3,  // 3 tin credits
+    role: 'You have 3 tin credits',
     bio: 'More features coming soon',
   },
   Johnny: {
     username: 'Johnsidus the Third',
     password: 'password2',
     email: 'Johnsidius the third!',
-    role: 3,  // 3 tin credits
-    bio: 'More features coming soon',
-  },
-  Noah: {
-    username: 'Noah',
-    password: 'noahchoi123',
-    email: 'Noah!',
-    role: 12, // 12 tin credits
+    role: 'You have 3 tin credits',
     bio: 'More features coming soon',
   },
   Kevin: {
     username: 'Kevin',
     password: 'password3',
     email: 'Kevin!',
-    role: 0, // 0 tin credits
+    role: 'you have 0 tin credits',
     bio: 'More features coming soon',
   },
   Maks: {
     username: 'Maks',
     password: 'password4',
     email: 'Maks!',
-    role: 100000000000, // 100 billion tin credits (for example)
+    role: 'you have 100000000000 tin credits',
     bio: 'More features coming soon',
   },
+  Charles: {
+    username: 'Charles',
+    password: 'password5',
+    email: 'Charles!',
+    role: 'you have 100 tin credits',
+    bio: 'More features coming soon',
+  },
+  Taxo: {
+    username: 'Maxo Taxo',
+    password: 'password5',
+    email: 'Maxo Taxo!',
+    role: 'you have 0 tin credits',
+    bio: 'More features coming soon',
+  },
+  Dayden: {
+    username: 'Dayden',
+    password: 'password6',
+    email: 'Dayden!',
+    role: 'you have 0 tin credits',
+    bio: 'More features coming soon',
+  },
+  Kevin: {
+    username: 'Kevin',
+    password: 'kevin_1515',
+    email: 'Kevin!',
+    role: 'You have 0 tin credits!',
+    bio: 'Construction Underway!'
 };
+document.getElementById('citizenship-test-form')?.addEventListener('submit', function (event) {
+  event.preventDefault();
+  window.location.href = 'index.html';
+});
+// Handle login form submission (on login page)
+document.getElementById('login-form')?.addEventListener('submit', function (event) {
+  event.preventDefault();
 
-// On page load, check if user is logged in and display user info
+  // Get form data
+  const username = document.getElementById('username').value;
+  const password = document.getElementById('password').value;
+
+  // Check if the username and password match any user
+  const user = users[username];
+  if (user && user.password === password) {
+    // Store user info in localStorage (for demo purposes)
+    localStorage.setItem('username', username);
+    // Redirect directly to user info page
+    window.location.href = 'user-info.html';
+  } else {
+    // Display error message if login fails
+    document.getElementById('error-message').textContent = 'Invalid username or password';
+  }
+});
+
+// On homepage (index.html), check if user is logged in and show relevant buttons
 window.onload = function () {
   const username = localStorage.getItem('username');
 
   if (username) {
     const user = users[username];
-    // Display user credits
-    document.getElementById('user-credits-display').textContent = `You have ${user.role} tin credits`;
-    // Store current user in the global scope
-    window.currentUser = user;
+    document.getElementById('welcome-message').textContent = `Hello, ${user.username}!`;
+    document.getElementById('login-btn').style.display = 'none';
+    document.getElementById('logout-btn').style.display = 'block';
+    document.getElementById('profile-btn').style.display = 'block';
   } else {
-    // Redirect if user is not logged in
-    window.location.href = 'login.html';
+    document.getElementById('welcome-message').textContent = 'You are not logged in.';
+    document.getElementById('login-btn').style.display = 'block';
+    document.getElementById('logout-btn').style.display = 'none';
+    document.getElementById('profile-btn').style.display = 'none';
   }
+
+  // Handle logout
+  document.getElementById('logout-btn')?.addEventListener('click', function () {
+    localStorage.removeItem('username');
+    window.location.reload();
+  });
+
+  // Handle profile redirection
+  document.getElementById('profile-btn')?.addEventListener('click', function () {
+    window.location.href = 'user-info.html';
+  });
 };
 
-// Handle product purchase
-function buyProduct(productCost) {
-  const user = window.currentUser;
-
-  if (user.role >= productCost) {
-    // Deduct the product cost from the user's balance
-    user.role -= productCost;
-    // Update the displayed user credits
-    document.getElementById('user-credits-display').textContent = `You have ${user.role} tin credits`;
-
-    // Redirect to done.html after successful purchase
-    alert('Purchase successful!');
-    window.location.href = 'done.html';
+// On user-info.html, display user info
+if (window.location.pathname.includes('user-info.html')) {
+  const username = localStorage.getItem('username');
+  if (username) {
+    const user = users[username];
+    document.getElementById('user-name').textContent = ` Hello, ${user.username}`;
+    document.getElementById('user-role').textContent = ` Congrats: ${user.role}`;
+    document.getElementById('user-bio').textContent = `Dont worry! ${user.bio}`;
   } else {
-    alert('You do not have enough tin credits to make this purchase.');
+    // Redirect to login if user is not logged in
+    window.location.href = 'login.html';
   }
+
+  document.getElementById('back-btn').addEventListener('click', function () {
+    window.location.href = 'index.html';
+  });
 }
 
 
 </script>
+ -->
  -->
