--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <h1>Welcome to Tinland!</h1>
-      <p>Your journey starts here!</p>
+      <p>A land of the free</p>
     </div>
   </header>
 
