--- a/gov.html
+++ b/gov.html
@@ -1,1 +1,196 @@
-<h1>Coming Soon!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Professional Dark Mode Website</title>
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #eaeaea;
+            line-height: 1.6;
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #1c1c1c;
+            padding: 20px 40px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .logo {
+            font-size: 24px;
+            color: #fff;
+            font-weight: bold;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #eaeaea;
+            font-size: 16px;
+            padding: 10px 20px;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #ff6347;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown .dropbtn {
+            background-color: #1c1c1c;
+            color: #eaeaea;
+            border: 1px solid transparent;
+            padding: 12px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .dropdown .dropbtn:hover {
+            background-color: #333;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #333;
+            min-width: 200px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            z-index: 1;
+            border-radius: 5px;
+            margin-top: 10px;
+            transition: opacity 0.3s ease;
+        }
+
+        .dropdown-content a {
+            color: #eaeaea;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: background-color 0.3s ease;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #444;
+            color: #ff6347;
+        }
+
+        .main-section {
+            padding: 60px 40px;
+            text-align: center;
+            max-width: 900px;
+            margin: 0 auto;
+        }
+
+        .main-section h1 {
+            font-size: 3.5rem;
+            margin-bottom: 20px;
+            color: #fff;
+        }
+
+        .main-section p {
+            font-size: 1.2rem;
+            color: #ddd;
+            line-height: 1.7;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        footer {
+            text-align: center;
+            background-color: #1c1c1c;
+            color: #eaeaea;
+            padding: 20px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            font-size: 14px;
+        }
+
+        footer a {
+            color: #ff6347;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+    </style>
+</head>
+<body>
+
+    <nav>
+        <div class="logo">Tinland</div>
+        <div>
+            <a href="index.html">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn">Info</button>
+                <div class="dropdown-content">
+                    <a href="military.html">Military</a>
+                    <a href="tinapedia.html">Tinapedia</a>
+                    <a href="funds.html">Funds</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">For Citizens</button>
+                <div class="dropdown-content">
+                    <a href="login.html">Login</a>
+                    <a href="shop.html">Shop</a>
+                    <a href="user-info.html">Your-Page</a>
+                </div>
+            </div>
+            <a href="donate.html">Donate</a>
+            <a href="citizenship-test.html">Citizenship</a>
+        </div>
+    </nav>
+
+    <section class="main-section">
+        <h1>More Stuff Coming Soon on This Page</h1>
+        <p>Test</p>
+    </section>
+
+    <footer>
+        <p>&copy; Tinland | <a href="index.html">Home</a></p>
+    </footer>
+
+    <script>
+        const dropdownBtns = document.querySelectorAll('.dropbtn');
+
+        dropdownBtns.forEach(btn => {
+            btn.addEventListener('click', function(event) {
+                const dropdownContent = this.nextElementSibling;
+                dropdownContent.style.display = (dropdownContent.style.display === 'block') ? 'none' : 'block';
+
+                event.stopPropagation();
+            });
+        });
+
+  
+        window.addEventListener('click', function(event) {
+            const dropdownContents = document.querySelectorAll('.dropdown-content');
+            
+            dropdownContents.forEach(content => {
+                if (!event.target.matches('.dropbtn') && !event.target.matches('.dropdown-content') && !content.contains(event.target)) {
+                    content.style.display = 'none';
+                }
+            });
+        });
+    </script>
+
+</body>
+</html>
+
