--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="user-info.html" class="button">Your Page</a>
         <a href="funds.html" class="button">Funds</a>
         <a href="gov.html" class="button">Government Page</a>
+         <a href="forms.html" class="button">Surveys</a>
       </div>
 
       <div class="column">
