--- a/form1.html
+++ b/form1.html
@@ -22,6 +22,7 @@
         h1 {
             text-align: center;
             color: #ffffff; 
+            margin-bottom: 25px;
         }
         p {
             text-align: center;
@@ -44,7 +45,7 @@
 <body>
 
     <div class="container">
-        <h1>The Snack Form!/h1>
+        <h1>The Snack Form!</h1>
 
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeXE12BbNN3kjQhEMMiTQ5UNIdozr__VkzrsJQ2Cd1d-QuyKw/viewform?embedded=true" width="640" height="1233" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
