--- a/forms.html
+++ b/forms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tinland Available Forms</title>
+    <title>Tinland Forms</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,8 +56,7 @@
 <body>
 
     <div class="container">
-        <h1>Available Forms in Tinland</h1>
-        <p>Here are the forms you can fill out for various services in Tinland. Simply click the links to access each form.</p>
+        <h1>Available Forms for Tinland</h1>
 
         <ul class="form-list">
             <li class="form-item">
