--- a/login.html
+++ b/login.html
@@ -51,6 +51,13 @@ const users = {
     role: 'you have 0 tin credits',
     bio: 'More features coming soon',
   },
+     Noah: {
+    username: 'Noah',
+    password: 'noahchoi123',
+    email: 'Noah!',
+    role: 'you have 100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 tin credits',
+    bio: 'More features coming soon',
+  },
   Maks: {
     username: 'Maks',
     password: 'password4',
