--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="funds.html" class="button">Funds</a>
         <a href="gov.html" class="button">Government Page</a>
          <a href="forms.html" class="button">Surveys</a>
+        <a href="gambling.html" class="button">Gambling</a>
       </div>
 
       <div class="column">
