--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="gov.html" class="button">Government Page</a>
          <a href="forms.html" class="button">Surveys</a>
         <a href="gambling.html" class="button">Gambling</a>
+        <a href="re.html" class="button">Rations eligibility</a>
       </div>
 
       <div class="column">
