--- a/re.html
+++ b/re.html
@@ -1,1 +1,156 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tinaland Rations Eligibility</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #121212;
+      color: #e0e0e0;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #1f1f1f;
+      color: #ffffff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1, h2, h3 {
+      margin: 0;
+    }
+
+    h2, h3 {
+      color: #81c784;
+    }
+
+    ul, ol {
+      padding-left: 20px;
+    }
+
+    ul li, ol li {
+      margin-bottom: 10px;
+      color: #e0e0e0;
+    }
+
+    dt {
+      font-weight: bold;
+    }
+
+    dd {
+      margin-bottom: 15px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #1f1f1f;
+      color: #ffffff;
+    }
+
+    section {
+      margin: 20px;
+      padding: 20px;
+      background-color: #333333;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    #faqs dl {
+      display: grid;
+      gap: 10px;
+    }
+
+    dt, dd {
+      color: #e0e0e0;
+    }
+
+    @media (max-width: 768px) {
+      body {
+        font-size: 14px;
+      }
+
+      header {
+        padding: 15px;
+      }
+
+      section {
+        margin: 10px;
+        padding: 15px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Tinaland Rations Eligibility Page</h1>
+    <p>Welcome to the Tinaland Rations Eligibility Page</p>
+  </header>
+
+  <main>
+    <section id="eligibility">
+      <h2>What does this mean:</h2>
+      <p>Only certain people in Tinaland qualify for 3-day rations. Chat with Maks to dispute your eligibility and check here to find it.</p>
+    </section>
+
+    <section id="qualify">
+      <h3>M, W, and F rations qualifiers:</h3>
+      <ul>
+        <li><strong>Kevin</strong></li>
+        <li><strong>Maks G</strong></li>
+        <li><strong>Max T</strong></li>
+        <li><strong>Charles</strong></li>
+        <li><strong>Johnny</strong></li>
+        <li><strong>Noah</strong></li>
+        <li><strong>Liam</strong></li>
+      </ul>
+    </section>
+
+    <section id="not-qualify">
+      <h3>W and F rations qualifiers:</h3>
+      <ul>
+        <li><strong>David</strong></li>
+        <li><strong>Kagan</strong></li>
+      </ul>
+    </section>
+
+    <section id="how-to-apply">
+      <h3>F-only qualifiers:</h3>
+      <ol>
+        <li><strong>Liv</strong> (only 2 Fridays a month)</li>
+      </ol>
+    </section>
+
+    <section id="how-to-apply">
+      <h3>How to Apply for Rations</h3>
+      <ol>
+        <li><strong>Become a Tinizen:</strong> Fill out the form at tinland.online and/or DM Maks.</li>
+        <li><strong>Appeal to qualified Tinizens:</strong> When appeals happen, all Tinizens in rations ranks above you will vote. Votes will be based solely on your case.</li>
+      </ol>
+    </section>
+
+    <section id="faqs">
+      <h3>FAQs</h3>
+      <dl>
+        <dt>How often are rations distributed?</dt>
+        <dd>Depends on your status</dd>
+
+        <dt>How are the levels decided?</dt>
+        <dd>To get rations 3 times a week, you need to make 1 meaningful contribution to Tinaland.</dd>
+
+        <dt>Can I appeal anytime?</dt>
+        <dd>Yes</dd>
+      </dl>
+    </section>
+  </main>
+
+  <footer>
+    <p>Thank you for visiting the Tinaland Rations Eligibility Page. If you have further questions, please contact us.</p>
+  </footer>
+</body>
+</html>
 
