--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
          <a href="forms.html" class="button">Surveys</a>
         <a href="gambling.html" class="button">Gambling</a>
         <a href="re.html" class="button">Rations eligibility</a>
+        <a href="gaming.html" class="button">Tin Gaming</a>
       </div>
 
       <div class="column">
