--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="gambling.html" class="button">Gambling</a>
         <a href="re.html" class="button">Rations eligibility</a>
         <a href="gaming.html" class="button">Tin Gaming</a>
+        <a href="gaming.html" class="button">Tin Chat</a>
       </div>
 
       <div class="column">
