--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="re.html" class="button">Rations eligibility</a>
         <a href="gaming.html" class="button">Tin Gaming</a>
         <a href="chat.html" class="button">Tin Chat</a>
+         <a href="bible.html" class="button">Tin Bible</a>
       </div>
 
       <div class="column">
