--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+<h2>Maintnence Break</h2>
+<h2>Go to tinland.online/login.html for your page</h2>
+<style>
+  h2{
+    text-align: center;
+    color: blue;
+  }
+  </style>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -369,3 +377,4 @@ if (window.location.pathname.includes('user-info.html')) {
 }
 
 </script>
+ -->
