--- a/index.html
+++ b/index.html
@@ -24,20 +24,16 @@
   </header>
 
   <main>
+ <div class="navbar">
+        <ul>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="user-info.html">Your-Page</a></li>
+            <li><a href="tinapedia.html">tinapedia</a></li>
+            <li><a href="bible.html">Church of Tin</a></li>
+            <li><a href="nav.html">All Other Pages</a></li>
+        </ul>
+    </div>
     <section class="container">
-      <div class="column">
-        <h2>Navigation</h2>
-        <a href="tinapedia.html" class="button">Tinapedia</a>
-        <a href="user-info.html" class="button">Your Page</a>
-        <a href="funds.html" class="button">Funds</a>
-        <a href="gov.html" class="button">Government Page</a>
-         <a href="forms.html" class="button">Surveys</a>
-        <a href="gambling.html" class="button">Gambling</a>
-        <a href="re.html" class="button">Rations eligibility</a>
-        <a href="gaming.html" class="button">Tin Gaming</a>
-        <a href="chat.html" class="button">Tin Chat</a>
-         <a href="bible.html" class="button">Tin Bible</a>
-      </div>
 
       <div class="column">
         <h2>Our Beliefs</h2>
@@ -242,6 +238,36 @@
       font-size: 1em;
     }
   }
+    .navbar {
+            background-color: #333;
+            position: sticky;
+            top: 0;
+            width: 100%;
+            z-index: 1000; /* Ensures the navbar is above other content */
+        }
+
+        .navbar ul {
+            list-style-type: none;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        .navbar ul li a {
+            text-decoration: none;
+            color: white;
+            padding: 15px 20px;
+            display: inline-block;
+        }
+
+        .navbar ul li a:hover {
+            background-color: #575757;
+        }
 </style>
 
 <script>
