--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<h2>Maintnence Break</h2>
-<h2>Go to tinland.online/login.html for your page</h2>
-<style>
-  h2{
-    text-align: center;
-    color: blue; 
-  }
-  </style>
-<!-- <!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -403,4 +396,4 @@ if (window.location.pathname.includes('user-info.html')) {
 }
 
 </script>
- -->
+
