--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,23 +16,23 @@
   </header>
 
   <main>
- <div class="navbar">
-        <ul>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="user-info.html">Your-Page</a></li>
-            <li><a href="tinapedia.html">tinapedia</a></li>
-            <li><a href="bible.html">Church of Tin</a></li>
-            <li><a href="nav.html">All Other Pages</a></li>
-        </ul>
+    <div class="navbar">
+      <ul>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="user-info.html">Your-Page</a></li>
+        <li><a href="tinapedia.html">Tinapedia</a></li>
+        <li><a href="bible.html">Church of Tin</a></li>
+        <li><a href="nav.html">All Other Pages</a></li>
+      </ul>
     </div>
-    <section class="container">
 
+    <section class="container">
       <div class="column">
         <h2>Our Beliefs</h2>
         <ul>
-          <li>Freedom of worship.</li>
-          <li>Equal representation.</li>
-          <li>Secular government.</li>
+          <li>Freedom of worship</li>
+          <li>Equal representation</li>
+          <li>Secular government</li>
           <li>Fun</li>
         </ul>
       </div>
@@ -231,36 +230,37 @@
       font-size: 1em;
     }
   }
-    .navbar {
-            background-color: #333;
-            position: sticky;
-            top: 0;
-            width: 100%;
-            z-index: 1000; /* Ensures the navbar is above other content */
-        }
 
-        .navbar ul {
-            list-style-type: none;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
+  .navbar {
+    background-color: #333;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
 
-        .navbar ul li {
-            display: inline;
-            margin-right: 20px;
-        }
+  .navbar ul {
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
 
-        .navbar ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 15px 20px;
-            display: inline-block;
-        }
+  .navbar ul li {
+    display: inline;
+    margin-right: 20px;
+  }
 
-        .navbar ul li a:hover {
-            background-color: #575757;
-        }
+  .navbar ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 15px 20px;
+    display: inline-block;
+  }
+
+  .navbar ul li a:hover {
+    background-color: #575757;
+  }
 </style>
 
 <script>
