--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <h1>Welcome to Tinland!</h1>
-      <p>A land of the free</p>
+      <h2>A land of the free</h2>
     </div>
   </header>
 
@@ -26,7 +26,7 @@
       </ul>
     </div>
 
-    <section class="container">
+
       <div class="column">
         <h2>Our Beliefs</h2>
         <ul>
@@ -36,7 +36,7 @@
           <li>Fun</li>
         </ul>
       </div>
-    </section>
+  
 
     <section class="container">
       <div class="column">
