--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
 
         <h2>Our Beliefs</h2>
-        <ul>
-          <li>Freedom of worship</li>
-          <li>Equal representation</li>
-          <li>Secular government</li>
-          <li>Fun</li>
-        </ul>
+
+          <h3>Freedom of worship</h3>
+          <h3>Equal representation</h3>
+          <h3>Secular government</h3>
+          <h3>Fun</h3>
+
   
 
     <section class="container">
