--- a/index.html
+++ b/index.html
@@ -256,30 +256,16 @@
     display: inline-block;
   }
 
-  .navbar ul li a:hover {
-    background-color: #575757;
-  }
-  /* Increase the size of the h2 and center the text */
+
 h2 {
   font-size: 2.5em; /* Make the heading bigger */
   color: #FF79C6;
   text-align: center; /* Center the heading */
   margin-bottom: 20px;
 }
-
-/* Style the list below the h2 tag */
-ul {
-  font-size: 1.6em; /* Increase the font size of the list */
-  list-style: none;
-  color: #e0e0e0;
-  padding-left: 0;
-  margin: 0 auto;
-  max-width: 500px; /* Optional: Limit the width of the list */
-  text-align: center; /* Center the list items */
-}
-
-ul li {
-  margin-bottom: 15px; /* Increase spacing between list items */
+h3{
+  font-size: 2.0em;
+  text-align:center;
 }
 </style> 
 
