--- a/index.html
+++ b/index.html
@@ -288,11 +288,13 @@ h3{
       border-radius: 5px;
       z-index: 100;
       width: 300px;
+      height: 700px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
 
     .popup-content {
       text-align: center;
+      color: #00;
     }
 
     .close-button {
@@ -302,7 +304,14 @@ h3{
       cursor: pointer;
       font-size: 20px;
     }
-
+  .popup h2{
+    text-align: center;
+    color: #00000;
+  }
+  .popup h3{
+    text-align: center;
+    color: #0;
+  }
 </style> 
 
 <script>
